home page hover effects

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
     <title>The Monkees</title>
 </head>
 
@@ -24,22 +26,22 @@
     <section class="container-fluid section">
         <div class="row container-fluid margin">
             <a href="our-songs.html">
-                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links our-songs-logo">
+                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links our-songs-logo hvr-sweep-to-bottom">
                     <h2 class="uppercase title-2"><span class="border">Our songs</span></h2>
                 </div>
             </a>
             <a href="events-availability.html">
-                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links our-events-logo">
+                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links our-events-logo hvr-sweep-to-bottom">
                     <h2 class="uppercase title-2"><span class="border">Events/Availability</span></h2>
                 </div>
             </a>
             <a href="social-media.html">
-                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links social-media-logo">
+                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links social-media-logo hvr-sweep-to-bottom">
                     <h2 class="uppercase title-2"><span class="border">Social Media</span></h2>
                 </div>
             </a>
             <a href="our-story.html">
-                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links our-story-logo">
+                <div class="col-xs-12 col-sm-12 col-md-6 home-page-links our-story-logo hvr-sweep-to-bottom">
                     <h2 class="uppercase title-2"><span class="border">Our story</span></h2>
                 </div>
             </a>
@@ -50,14 +52,24 @@
         <div class="row container-fluid footer-bg-color">
             <div class="col-xs-4">
                 <h5 class="uppercase footer-title">Our music</h5>
+                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!</br>
+                <a href="our-songs.html"><button class="btn btn-xs">Our Songs!</button></a></p>
             </div>
 
             <div class="col-xs-4">
                 <h5 class="uppercase footer-title">events/availability</h5>
+                <p class="uppercase footer-p">If you want to join us at one of our live shows or book our show just click on the link below! 
+                We cater for anything from weddings to Christmas parties!</br>
+                <a href="events-availability.html"><button class="btn btn-xs">Our Events!</button></a></p>
             </div>
 
             <div class="col-xs-4">
                 <h5 class="uppercase footer-title">Check out our social media</h5>
+                <ul class="list-inline social-links">
+                    <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </footer>
