--- a/our-songs.html
+++ b/our-songs.html
@@ -16,13 +16,24 @@
     <header>
         <div class="row container-fluid margin">
             <div class="col-xs-12 margin header-bg-color">
-                <div class="box">
-                    <h1 class="title uppercase">The Monkees</h1>
-                </div>
-                
-                <div class="burger">
-                    
-                </div>
+                <a href="index.html" class="link">
+                    <div class="box">
+                        <h1 class="title uppercase">The Monkees</h1>
+                    </div>
+                </a>
+
+                <a href="our-songs.html" class="uppercase margin link menu-option menu-option-1 hvr-sweep-to-bottom col-xs-12 col-sm-6 col-md-3">
+                    <div class="option-item">Our songs</div>
+                </a>
+                <a href="events-availability.html" class="uppercase margin link menu-option menu-option-2 hvr-sweep-to-bottom col-xs-12 col-sm-6 col-md-3">
+                    <div class="option-item">Events</div>
+                </a>
+                <a href="our-story.html" class="uppercase margin link menu-option menu-option-3 hvr-sweep-to-bottom col-xs-12 col-sm-6 col-md-3">
+                    <div class="option-item">our story</div>
+                </a>
+                <a href="social-media.html" class="uppercase margin link menu-option menu-option-4 hvr-sweep-to-bottom col-xs-12 col-sm-6 col-md-3">
+                    <div class="option-item">social media</div>
+                </a>
             </div>
         </div>
     </header>
