additions to our-songs, social-media and our-story

--- a/events-availability.html
+++ b/events-availability.html
@@ -43,8 +43,8 @@
             <h2 class="uppercase title-3">upcoming Events</h2>
         </div>
         <div class="row events-bg margin ">
-            <p class="events-intro">We have events planned for the follwing dates and venues</p>
-            <div class="events-list-bg events margin">
+            <p class="intro">We have events planned for the follwing dates and venues</p>
+            <div class="events-list-bg events">
                 <ul class="events-list bg-transparent margin">
                     </br>
                     <li class="events-list-item">
@@ -109,7 +109,7 @@
         </div>
 
         <div class="row margin availability-bg form">
-            <p class="events-intro">Complete the short form below if you are interested in booking our services!</p>
+            <p class="intro">Complete the short form below if you are interested in booking our services!</p>
             <form action="#" method="post">
                 <label for="name" class="events-intro">Name:</label></br>
                 <input type="text" name="name" id="name" placeholder="Name" class="form-item" required/></br>
