--- a/our-story.html
+++ b/our-story.html
@@ -39,6 +39,92 @@
     </header>
 
     <section>
+        <div class="row margin our-story-bg">
+            <h2 class="uppercase title-3">Our Story</h2>
+        </div>
+
+        <div class="row margin our-story-bg">
+            <h3 class="uppercase title-4 margin">First let's see the team</h3>
+        </div>
+
+        <div class="row margin our-story-bg">
+            <div class="col-xs-12 col-md-12 col-lg-6">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="/assets/images/peter-tork.jpg" class="img-circle media-object" height=100 width=100 alt="Peter Tork" />
+                    </div>
+                    <div class="media-body">
+                        <blockquote class="quote member-info">
+                            <p>"Pop music is aspirin and the blues are vitamins."</br><span class="deceased">-recently deceased-</span></p>
+                            <footer class="member-name"> Peter Tork</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-12 col-lg-6">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="/assets/images/micheal-nesmith.jpg" class="img-circle media-object" height=100 width=100 alt="Michael Nesmith" />
+                    </div>
+                    <div class="media-body">
+                        <blockquote class="quote member-info">
+                            <p>"Theater is life. Cinema is art. Television is furniture."</p>
+                            </br>
+                            <footer class="member-name"> Michael Nesmith</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-12 col-lg-6">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="/assets/images/davy-jones.jpg" class="img-circle media-object" height=100 width=100 alt="Davy Jones" />
+                    </div>
+                    <div class="media-body">
+                        <blockquote class="quote member-info">
+                            <p>"The Monkees are like the mafia. You're in for life. Nobody gets out."</br><span class="deceased">-recently deceased-</span></p>
+                            <footer class="member-name"> Davy Jones</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-12 col-lg-6">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="/assets/images/micky-dolenz.jpg" class="img-circle media-object" height=100 width=100 alt="Micky Dolenz" />
+                    </div>
+                    <div class="media-body">
+                        <blockquote class="quote member-info">
+                            <p>"And singing is a physical thing - your vocal cords are these muscles."</p>
+                            </br>
+                            <footer class="member-name"> Micky Dolenz</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row margin our-story-bg">
+            <h3 class="uppercase title-4 margin">Where it all began</h3>
+        </div>
+
+        <div class="row margin our-story-bg">
+            <p class="our-story-para">
+                <img src="/assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in Los Angeleas in 1966. by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees. Firstof all we began
+                inthe TV industry airing from 1966 to 1968. When the TV series finished the band went on and fought for all musical rights for the Monkees.
+            </p>
+            <p class="our-story-para">
+                The band continued on until 1971 when it eventually came to an end. <span class="uppercase">until now!</span> We've performed many highly successful reunion concerts but the band is now back together properly.
+            </p>
+            <p class="our-story-para"> It is with great sadness w inform you that two of theband have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
+            <div class="row margin our-story-bg">
+                <img src="/assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+                <img src="/assets/images/the-band-3.png" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+            </div>
+        </div>
 
     </section>
 
