--- a/events-availability.html
+++ b/events-availability.html
@@ -111,31 +111,31 @@
         <div class="row margin availability-bg form">
             <p class="intro">Complete the short form below if you are interested in booking our services!</p>
             <form action="#" method="post">
-                <label for="name" class="events-intro">Name:</label></br>
-                <input type="text" name="name" id="name" placeholder="Name" class="form-item" required/></br>
+                <label for="name" class="events-intro">Name:</label><br>
+                <input type="text" name="name" id="name" placeholder="Name" class="form-item" required/><br>
 
-                <label for="email" class="events-intro">Email:</label></br>
-                <input type="email" name="email" id="email" placeholder="Email" class="form-item" required/></br>
+                <label for="email" class="events-intro">Email:</label><br>
+                <input type="email" name="email" id="email" placeholder="Email" class="form-item" required/><br>
 
-                <label for="details" class="events-intro">Events details (date/time/place):</label></br>
+                <label for="details" class="events-intro">Events details (date/time/place):</label><br>
                 <textarea rows="5" name="details" class="form-item-details" id="details" placeholder="Details"></textarea></br>
 
-                <input type="submit" value="Submit" class="form-item btn" />
+                <input type="submit" value="Submit" class="form-item btn"/>
             </form>
         </div>
     </section>
-
+    
     <footer>
         <div class="row container-fluid footer-bg-color margin">
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">Our music</h5>
-                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!</br>
+                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!<br>
                     <a href="our-songs.html"><button class="btn btn-xs">Our Songs!</button></a></p>
             </div>
 
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">events/availability</h5>
-                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!</br>
+                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!<br>
                     <a href="events-availability.html"><button class="btn btn-xs">Our Events!</button></a></p>
             </div>
 
