--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="row margin footer-bg-color">
-            <video src="/assets/video/TheMonkees(4).mp4" width="100%" class="margin hidden-xs hidden-sm col-md-12 col-lg-12" controls></video>
+            <video src="/assets/video/TheMonkees(4).mp4" class="margin hidden-xs hidden-sm col-md-12 col-lg-12 video" controls></video>
         </div>
     </section>
 
@@ -56,13 +56,13 @@
         <div class="row container-fluid footer-bg-color margin">
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">Our music</h5>
-                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!</br>
+                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!<br>
                     <a href="our-songs.html"><button class="btn btn-xs">Our Songs!</button></a></p>
             </div>
 
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">events/availability</h5>
-                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!</br>
+                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!<br>
                     <a href="events-availability.html"><button class="btn btn-xs">Our Events!</button></a></p>
             </div>
 
