--- a/our-story.html
+++ b/our-story.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="media-body">
                         <blockquote class="quote member-info">
-                            <p>"Pop music is aspirin and the blues are vitamins."</br><span class="deceased">-recently deceased-</span></p>
+                            <p>"Pop music is aspirin and the blues are vitamins."<br><span class="deceased">-recently deceased-</span></p>
                             <footer class="member-name"> Peter Tork</footer>
                         </blockquote>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="media-body">
                         <blockquote class="quote member-info">
                             <p>"Theater is life. Cinema is art. Television is furniture."</p>
-                            </br>
+                            <br>
                             <footer class="member-name"> Michael Nesmith</footer>
                         </blockquote>
                     </div>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="media-body">
                         <blockquote class="quote member-info">
-                            <p>"The Monkees are like the mafia. You're in for life. Nobody gets out."</br><span class="deceased">-recently deceased-</span></p>
+                            <p>"The Monkees are like the mafia. You're in for life. Nobody gets out."<br><span class="deceased">-recently deceased-</span></p>
                             <footer class="member-name"> Davy Jones</footer>
                         </blockquote>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="media-body">
                         <blockquote class="quote member-info">
                             <p>"And singing is a physical thing - your vocal cords are these muscles."</p>
-                            </br>
+                            <br>
                             <footer class="member-name"> Micky Dolenz</footer>
                         </blockquote>
                     </div>
@@ -132,13 +132,13 @@
         <div class="row container-fluid footer-bg-color margin">
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">Our music</h5>
-                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!</br>
+                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!<br>
                     <a href="our-songs.html"><button class="btn btn-xs">Our Songs!</button></a></p>
             </div>
 
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">events/availability</h5>
-                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!</br>
+                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!<br>
                     <a href="events-availability.html"><button class="btn btn-xs">Our Events!</button></a></p>
             </div>
 
