--- a/social-media.html
+++ b/social-media.html
@@ -69,13 +69,13 @@
         <div class="row container-fluid footer-bg-color margin">
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">Our music</h5>
-                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!</br>
+                <p class="uppercase footer-p">Never heard our music before? Why not click the link below and check out just some of our tunes!<br>
                     <a href="our-songs.html"><button class="btn btn-xs">Our Songs!</button></a></p>
             </div>
 
             <div class="col-xs-12 col-md-4">
                 <h5 class="uppercase footer-title">events/availability</h5>
-                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!</br>
+                <p class="uppercase footer-p">Join us at our live shows or to book us just click on the link below! We cater for anything from weddings to Christmas parties!<br>
                     <a href="events-availability.html"><button class="btn btn-xs">Our Events!</button></a></p>
             </div>
 
