--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="row margin footer-bg-color">
-            <video src="/assets/video/TheMonkees(4).mp4" class="margin hidden-xs hidden-sm col-md-12 col-lg-12 video" controls></video>
+            <video src="./assets/video/TheMonkees(4).mp4" class="margin hidden-xs hidden-sm col-md-12 col-lg-12 video" controls></video>
         </div>
     </section>
 
