fixing img issue

--- a/our-story.html
+++ b/our-story.html
@@ -51,7 +51,7 @@
             <div class="col-xs-12 col-md-12 col-lg-6">
                 <div class="media">
                     <div class="media-left">
-                        <img src="/assets/images/peter-tork.jpg" class="img-circle media-object" height=100 width=100 alt="Peter Tork" />
+                        <img src="./assets/images/peter-tork.jpg" class="img-circle media-object" height=100 width=100 alt="Peter Tork" />
                     </div>
                     <div class="media-body">
                         <blockquote class="quote member-info">
@@ -65,7 +65,7 @@
             <div class="col-xs-12 col-md-12 col-lg-6">
                 <div class="media">
                     <div class="media-left">
-                        <img src="/assets/images/micheal-nesmith.jpg" class="img-circle media-object" height=100 width=100 alt="Michael Nesmith" />
+                        <img src="./assets/images/micheal-nesmith.jpg" class="img-circle media-object" height=100 width=100 alt="Michael Nesmith" />
                     </div>
                     <div class="media-body">
                         <blockquote class="quote member-info">
@@ -80,7 +80,7 @@
             <div class="col-xs-12 col-md-12 col-lg-6">
                 <div class="media">
                     <div class="media-left">
-                        <img src="/assets/images/davy-jones.jpg" class="img-circle media-object" height=100 width=100 alt="Davy Jones" />
+                        <img src="./assets/images/davy-jones.jpg" class="img-circle media-object" height=100 width=100 alt="Davy Jones" />
                     </div>
                     <div class="media-body">
                         <blockquote class="quote member-info">
@@ -94,7 +94,7 @@
             <div class="col-xs-12 col-md-12 col-lg-6">
                 <div class="media">
                     <div class="media-left">
-                        <img src="/assets/images/micky-dolenz.jpg" class="img-circle media-object" height=100 width=100 alt="Micky Dolenz" />
+                        <img src="./assets/images/micky-dolenz.jpg" class="img-circle media-object" height=100 width=100 alt="Micky Dolenz" />
                     </div>
                     <div class="media-body">
                         <blockquote class="quote member-info">
@@ -113,7 +113,7 @@
 
         <div class="row margin our-story-bg">
             <p class="our-story-para">
-                <img src="/assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in Los Angeleas in 1966. by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees. Firstof all we began
+                <img src="./assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in Los Angeleas in 1966. by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees. Firstof all we began
                 inthe TV industry airing from 1966 to 1968. When the TV series finished the band went on and fought for all musical rights for the Monkees.
             </p>
             <p class="our-story-para">
@@ -121,8 +121,8 @@
             </p>
             <p class="our-story-para"> It is with great sadness w inform you that two of theband have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
             <div class="row margin our-story-bg">
-                <img src="/assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
-                <img src="/assets/images/the-band-3.png" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+                <img src="./assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+                <img src="./assets/images/the-band-3.png" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
             </div>
         </div>
 
