--- a/social-media.html
+++ b/social-media.html
@@ -58,10 +58,10 @@
         </div>
         
         <div class="row social-media-bg margin">
-            <img src="/assets/images/our-events.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
-            <img src="/assets/images/the-band-4.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
-            <img src="/assets/images/the-band-5.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
-            <img src="/assets/images/the-band-6.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+            <img src="./assets/images/our-events.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+            <img src="./assets/images/the-band-4.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+            <img src="./assets/images/the-band-5.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
+            <img src="./assets/images/the-band-6.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
         </div>
     </section>
 
