--- a/our-story.html
+++ b/our-story.html
@@ -113,13 +113,13 @@
 
         <div class="row margin our-story-bg">
             <p class="our-story-para">
-                <img src="./assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in Los Angeleas in 1966. by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees. Firstof all we began
-                inthe TV industry airing from 1966 to 1968. When the TV series finished the band went on and fought for all musical rights for the Monkees.
+                <img src="./assets/images/the-band.jpg" class="our-story-img-1" alt="The Band" /> We first formed in 1966 in Los Angeleas. Bob Rafelson and Bert Schneider brought us together specifically for the American television series The Monkees. First of all we
+                began in the TV industry airing from 1966 to 1968. When the TV series finished the band went on and fought for all musical rights for the Monkees.
             </p>
             <p class="our-story-para">
                 The band continued on until 1971 when it eventually came to an end. <span class="uppercase">until now!</span> We've performed many highly successful reunion concerts but the band is now back together properly.
             </p>
-            <p class="our-story-para"> It is with great sadness w inform you that two of theband have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
+            <p class="our-story-para"> It is with great sadness we inform you that two of the band members have passed away. Jones and Tork pass away in 2012 and 2019 respectivley. We will continue on with the upcoming concerts in memory of our fellow band members.</p>
             <div class="row margin our-story-bg">
                 <img src="./assets/images/the-band-2.jpg" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
                 <img src="./assets/images/the-band-3.png" class="hidden-xs hidden-sm col-md-12 col-lg-12 our-story-img-2 margin" alt="The Band" />
